Teams And Capture The Flag Maps

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -98,6 +98,8 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Blaster/Maps/Lobby")
 +MapsToCook=(FilePath="/Game/Blaster/Maps/GameStartupMap")
 +MapsToCook=(FilePath="/Game/Blaster/Maps/BlasterMap")
++MapsToCook=(FilePath="/Game/Blaster/Maps/TeamDeathMatchMap")
++MapsToCook=(FilePath="/Game/Blaster/Maps/CaptureTheFlagMap")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
